--- a/gallery.html
+++ b/gallery.html
@@ -69,6 +69,7 @@ h2 {
     font-size:2.8rem;
     margin-bottom:2rem;
     text-align:center;
+    color: var(--primary-red);
 }
 
 .collection-nav {
@@ -113,6 +114,10 @@ h2 {
     font-size: 1.5rem;
     font-weight: bold;
     color: var(--primary-red);
+}
+
+.back-to-top {
+    margin-top: 1rem;
 }
 
 .back-to-top a {
@@ -229,7 +234,6 @@ footer {
 <div id="friends" class="gallery-collection">
 <div class="collection-header">
     <div class="collection-title">Friends</div>
-    <div class="back-to-top"><a href="#top">↑ Back to Top</a></div>
 </div>
 <div class="gallery-row">
     <figure class="figure-rect">
@@ -259,13 +263,13 @@ footer {
         <figcaption>Childhood friends</figcaption>
     </figure>
 </div>
+<div class="back-to-top"><a href="#top">↑ Back to Top</a></div>
 </div>
 
 <!-- Family -->
 <div id="family" class="gallery-collection">
 <div class="collection-header">
     <div class="collection-title">Family</div>
-    <div class="back-to-top"><a href="#top">↑ Back to Top</a></div>
 </div>
 <div class="gallery-row">
     <figure class="figure-rect">
@@ -295,13 +299,13 @@ footer {
         <figcaption>My mom and her lover</figcaption>
     </figure>
 </div>
+<div class="back-to-top"><a href="#top">↑ Back to Top</a></div>
 </div>
 
 <!-- Hobby -->
 <div id="hobby" class="gallery-collection">
 <div class="collection-header">
     <div class="collection-title">My Hobby</div>
-    <div class="back-to-top"><a href="#top">↑ Back to Top</a></div>
 </div>
 <div class="gallery-row">
     <figure class="figure-rect">
@@ -331,13 +335,13 @@ footer {
         <figcaption>Jul 2025</figcaption>
     </figure>
 </div>
+<div class="back-to-top"><a href="#top">↑ Back to Top</a></div>
 </div>
 
 <!-- Lover -->
 <div id="lover" class="gallery-collection">
 <div class="collection-header">
     <div class="collection-title">My Lover</div>
-    <div class="back-to-top"><a href="#top">↑ Back to Top</a></div>
 </div>
 <div class="gallery-row">
     <figure class="figure-rect">
@@ -367,6 +371,7 @@ footer {
         <figcaption>cafe date</figcaption>
     </figure>
 </div>
+<div class="back-to-top"><a href="#top">↑ Back to Top</a></div>
 </div>
 
 </div>
