--- a/gallery.html
+++ b/gallery.html
@@ -20,6 +20,10 @@
 
 * { margin:0; padding:0; box-sizing:border-box; }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: 'Lato', sans-serif;
     background-color: var(--bg-cream);
@@ -215,7 +219,7 @@ footer {
     <a href="index.html">Home</a>
     <a href="aboutme.html">Biography</a>
     <a href="gallery.html">Gallery</a>
-    <a href="#top">Contacts</a>
+    <a href="#contacts">Contacts</a>
 </nav>
 </header>
 
@@ -377,7 +381,7 @@ footer {
 </div>
 </section>
 
-<footer>
+<footer id="contacts">
 <div class="social-links">
     <a href="https://web.facebook.com/cycy.1123"><i class="fa-brands fa-facebook-f"></i></a>
     <a href="https://github.com/libutoncyrilmae-a11y"><i class="fa-brands fa-github"></i></a>
