--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
             color: var(--primary-red);
         }
 
-        main,
-        .section {
+        main {
             padding-top: 100px;
         }
 
@@ -287,6 +286,7 @@
     </style>
 </head>
 
+
 <body>
 <header>
     <nav>
@@ -325,9 +325,9 @@
         </p>
 
         <div class="about-buttons">
-            <a href="#" class="about-btn">My Beats</a>
-            <a href="#" class="about-btn">My Film Movies</a>
-            <a href="#" class="about-btn">My Film TV Shows</a>
+            <a href="mybeats.html" class="about-btn">My Beats</a>
+            <a href="myfilm.html" class="about-btn">My Film Movies</a>
+            <a href="myfilmtv.html" class="about-btn">My Film TV Shows</a>
         </div>
         
         <a href="#top" class="back-to-top">Back to Top</a>
@@ -383,6 +383,7 @@
 
 </body>
 </html>
+
 
 
 
